# test_resources_editable

./: .gitignore  MANIFEST.in  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
src/resources_editable/: __init__.py  __main__.py
